--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 // Store of PC`s
+// New store
 <body>
     <nav class="nav nav-text">
         <p class="text">PCStore</p>
