photos and some js

--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-// Store of PC`s
-// New store
+<!-- // Store of PC`s
+// New store -->
 <body>
     <nav class="nav nav-text">
         <p class="text">PCStore</p>
     </nav>
+
+    <section>
+		<div class="">
+			<div class="">
+				<div class="">
+					<button class="" id="show-images-btn">Показати
+						товари</button>
+				</div>
+			</div>
+			<div class="row mt-4" id="images-container">
+				<!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
