--- a/index.html
+++ b/index.html
@@ -15,24 +15,29 @@
 </head>
 <!-- // Store of PC`s
 // New store -->
+
 <body>
     <nav class="nav nav-text">
         <p class="text">PCStore</p>
     </nav>
 
+    <div></div>
     <section>
-		<div class="">
-			<div class="">
-				<div class="">
-					<button class="" id="show-images-btn">Показати
-						товари</button>
-				</div>
-			</div>
-			<div class="row mt-4" id="images-container">
-				<!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
-			</div>
-		</div>
-	</section>
+        <div class="">
+            <div class="cont-btn">
+                <div class="">
+                    <button class="spawn-btn" id="show-images-btn" onclick="addImageToContainer()">Показати
+                        товари</button>
+                </div>
+            </div>
+            <div class="container" id="images-container">
+                <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
+            </div>
+        </div>
+    </section>
+
+    <div></div>
+    <script src="./main.js"></script>
 </body>
 
 </html>
