--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         <p class="text">PCStore</p>
     </nav>
 
-    <div></div>
+    <div id="modal" class="modal">
+        <div class="modal-cont">
+            <span class="close">x</span>
+            Заплатіть мені і тут буде ваша реклама
+        </div>
+    </div>
+
     <section>
         <div class="">
             <div class="cont-btn">
