--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
     <div id="modal" class="modal">
         <div class="modal-cont">
-            <span class="close">x</span>
+            <span id="close" class="close">x</span>
             Заплатіть мені і тут буде ваша реклама
+            <p class="timer" id="timer"></p>
         </div>
     </div>
 
