--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         </div>
     </div>
 
+    <div id="subcribe" class="modal">
+        <div class="subcribe-cont">
+            <span id="sub-span" class="sub-span">Підписатися</span>
+            <span id="reject-span" class="reject-span">Відхилити</span>
+            <span id="close-sub" class="close-sub">x</span>
+        </div>
+    </div>
+
     <section>
         <div class="">
             <div class="container" id="images-container">
