--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     </div>
 
     <section>
+        <div class="buttons">
+            <ul>
+                <li class="txt-blue text" id="intel" onclick="Filter('Intel')">Intel</li>
+                <li class="txt-red text" id="amd" onclick="Filter('AMD')">AMD</li>
+            </ul>
+        </div>
         <div class="">
             <div class="container" id="images-container">
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
