without-animation-lab2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <ul>
                 <li class="txt-blue text" id="intel" onclick="Filter('Intel')">Intel</li>
                 <li class="txt-red text" id="amd" onclick="Filter('AMD')">AMD</li>
+                <li class="txt-grey text" id="all" onclick="Filter('')">All</li>
             </ul>
         </div>
         <div class="">
