--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
     </div>
 
     <section>
-        <div class="buttons">
-            <ul>
-                <li class="txt-blue text" id="intel" onclick="Filter('Intel')">Intel</li>
-                <li class="txt-red text" id="amd" onclick="Filter('AMD')">AMD</li>
-                <li class="txt-grey text" id="all" onclick="Filter('')">All</li>
-            </ul>
+        <div class="buttons" id="buttons">
+
         </div>
+        
         <div class="">
             <div class="container" id="images-container">
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
