--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section>
         <div class="buttons" id="buttons">
-
+            <button class="filter-button text" onclick="GetNodes('', true)">All</button>
         </div>
         
         <div class="">
