--- a/cart.html
+++ b/cart.html
@@ -19,20 +19,12 @@
 <body>
     <nav class="nav header-text main-color-bck">
         <a href="index.html" class="href-cart">
-            <p class="text this-page-color">PCStore</p>
+            <p class="text">PCStore</p>
         </a>
         <a href="cart.html" class="href-cart">
-            <i class="fa fa-shopping-cart cart" style="font-size:36px"></i>
+            <i class="fa fa-shopping-cart cart this-page-color" style="font-size:36px"></i>
         </a>
     </nav>
-
-    <div id="modal" class="modal">
-        <div class="modal-cont">
-            <span id="close" class="close">x</span>
-            Заплатіть мені і тут буде ваша реклама
-            <p class="timer" id="timer"></p>
-        </div>
-    </div>
 
     <div id="subcribe" class="modal">
         <div class="subcribe-cont">
@@ -43,7 +35,7 @@
     </div>
 
     <section>
-        <div class="buttons" id="buttons">
+        <div class="buttons" id="cart-buttons">
             <button class="filter-button text" onclick="GetNodes('', true)">All</button>
         </div>
 
