--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
 
     <section>
         <div class="buttons" id="cart-buttons">
-            <button class="filter-button text" onclick="GetNodes('', true)">All</button>
+            <button class="filter-button text" onclick="GetNodesForCart('', true)">All</button>
         </div>
 
         <div class="">
@@ -46,6 +46,7 @@
         </div>
     </section>
 
+    <script src="./cart.js"></script>
     <script src="./main.js"></script>
 </body>
 
