--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,8 @@
 
     <section>
         <div class="buttons" id="cart-buttons">
-            <button class="filter-button text" onclick="GetNodesForCart('', true)">All</button>
+            <button class="filter-button bck-button-color text" onclick="GetNodesForCart('', true)">All</button>
+            <button class="filter-button text bck-delete-color" onclick="DeleteAllFromCart()">Delete All</button>
         </div>
 
         <div class="">
