--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section>
         <div class="buttons" id="buttons">
-            <button class="filter-button text bck-button-color" onclick="GetNodes('', true)">All</button>
+            <button class="filter-button text bck-button-color hover-pointer" onclick="GetNodes('', true)">All</button>
         </div>
 
         <div class="">
