--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<!-- <i class='fa fa-shopping-basket'></i> -->
 
 <body>
     <nav class="nav header-text main-color-bck">
@@ -44,7 +50,8 @@
 
     <section>
         <div class="buttons" id="buttons">
-            <button class="filter-button text bck-button-color hover-pointer" onclick="GetNodes('', true)">All</button>
+            <label class="filter-button text hover-pointer underline black-color"
+                onclick="GetNodes('', true)">All</label>
         </div>
 
         <div class="">
