--- a/cart.html
+++ b/cart.html
@@ -51,6 +51,11 @@
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
             </div>
         </div>
+
+        
+        <div id="sum-cart">
+            
+        </div>
     </section>
 
     <script src="./cart.js"></script>
