--- a/cart.html
+++ b/cart.html
@@ -58,6 +58,7 @@
         </div>
     </section>
 
+    <script src="./nodes.js"></script>
     <script src="./cart.js"></script>
     <script src="./main.js"></script>
 </body>
