--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,7 @@
                 onclick="DeleteAllFromCart()">Delete All</label>
         </div>
 
-        <div class="">
+        <div class="centre">
             <div class="container" id="images-container">
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
             </div>
