--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<!-- <i class='fa fa-shopping-basket'></i> -->
 
 <body>
+    <!-- <div class="bck"></div> -->
     <nav class="nav header-text main-color-bck">
         <a href="index.html" class="href-cart">
             <p class="text this-page-color">PCStore</p>
@@ -54,7 +54,7 @@
                 onclick="GetNodes('', true)">All</label>
         </div>
         
-        <div class="">
+        <div class="centre">
             <div class="container" id="images-container">
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
             </div>
