--- a/cart.html
+++ b/cart.html
@@ -42,8 +42,8 @@
         <div class="buttons" id="cart-buttons">
             <label class="filter-button text hover-pointer underline black-color"
                 onclick="GetNodesForCart('', true)">All</label>
-            <label class="filter-button text hover-pointer underline black-color"
-                onclick="DeleteAllFromCart()">Delete All</label>
+            <label class="filter-button text hover-pointer underline black-color" onclick="DeleteAllFromCart()"> Delete
+                All</label>
         </div>
 
         <div class="centre">
@@ -52,9 +52,9 @@
             </div>
         </div>
 
-        
+
         <div id="sum-cart">
-            
+
         </div>
     </section>
 
