arrows for sort

--- a/cart.html
+++ b/cart.html
@@ -43,9 +43,9 @@
             <label class="filter-button text hover-pointer underline black-color"
                 onclick="GetNodesForCart('', true)">All</label>
             <label class="filter-button text hover-pointer underline black-color"
-                onclick="GetNodesForCart('', true, true)">A-Z</label>
+                onclick="GetNodesForCart('', true, true)">A↓</label>
             <label class="filter-button text hover-pointer underline black-color"
-                onclick="GetNodesForCart('', true, false, true)">Z-A</label>
+                onclick="GetNodesForCart('', true, false, true)">Z↑</label>
             <label class="filter-button text hover-pointer underline black-color"
                 onclick="GetNodesForCart('', true, false, false, true)">min-max</label>
             <label class="filter-button text hover-pointer underline black-color"
