--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+    <a href="" name="top" class="top-anchor"></a>
+
     <nav class="nav header-text main-color-bck">
         <a href="index.html" class="href-cart">
             <p class="text">PCStore</p>
@@ -65,6 +67,12 @@
 
         </div>
     </section>
+    
+    <div class="up-arrow href-cart" id="up-arrow">
+        <a href="#top" class="">
+            <i class="fa fa-arrow-up" style="font-size:36px; color: #000000"></i>
+        </a>
+    </div>
 
     <script src="./nodes.js"></script>
     <script src="./cart.js"></script>
