--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </head>
 
 <body>
+    <a href="" name="top" class="top-anchor"></a>
+    
     <nav class="nav header-text main-color-bck">
         <a href="index.html" class="href-cart">
             <p class="text this-page-color">PCStore</p>
@@ -59,6 +61,12 @@
             </div>
         </div>
     </section>
+
+    <div class="up-arrow href-cart" id="up-arrow">
+        <a href="#top">
+            <i class="fa fa-arrow-up" style="font-size:36px; color: #000000"></i>
+        </a>
+    </div>
 
     <script src="./nodes.js"></script>
     <script src="./main.js"></script>
