--- a/cart.html
+++ b/cart.html
@@ -24,11 +24,14 @@
     <a href="" name="top" class="top-anchor"></a>
 
     <nav class="nav header-text main-color-bck">
-        <a href="index.html" class="href-cart">
-            <p class="text">PCStore</p>
+        <a href="./index.html" class="href-cart">
+            <p class="text ">PCStore</p>
         </a>
-        <a href="cart.html" class="href-cart">
+        <a href="./cart.html" class="href-cart">
             <i class="fa fa-shopping-cart cart this-page-color" style="font-size:36px"></i>
+        </a>
+        <a href="./news.html" class="href-cart">
+            <i class="fa fa-newspaper-o cart" aria-hidden="true" style="font-size:36px"></i>
         </a>
     </nav>
 
@@ -67,16 +70,16 @@
 
         </div>
     </section>
-    
+
     <div class="up-arrow href-cart" id="up-arrow">
         <a href="#top" class="">
             <i class="fa fa-arrow-up" style="font-size:36px; color: #000000"></i>
         </a>
     </div>
 
-    <script src="./nodes.js"></script>
-    <script src="./cart.js"></script>
-    <script src="./main.js"></script>
+    <script src="JS/nodes.js"></script>
+    <script src="JS/cart.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
