--- a/news.html
+++ b/news.html
@@ -26,13 +26,13 @@
     
     <nav class="nav header-text main-color-bck">
         <a href="./index.html" class="href-cart">
-            <p class="text this-page-color">PCStore</p>
+            <p class="text">PCStore</p>
         </a>
         <a href="./cart.html" class="href-cart">
             <i class="fa fa-shopping-cart cart" style="font-size:36px"></i>
         </a>
         <a href="./news.html" class="href-cart">
-            <i class="fa fa-newspaper-o cart" aria-hidden="true" style="font-size:36px"></i>
+            <i class="fa fa-newspaper-o cart this-page-color" aria-hidden="true" style="font-size:36px"></i>
         </a>
     </nav>
 
@@ -51,19 +51,6 @@
             <span id="close-sub" class="close-sub">x</span>
         </div>
     </div>
-
-    <section>
-        <div class="buttons" id="buttons">
-            <label class="filter-button text hover-pointer underline black-color"
-                onclick="GetNodes('', true)">All</label>
-        </div>
-        
-        <div class="centre">
-            <div class="container" id="images-container">
-                <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
-            </div>
-        </div>
-    </section>
 
     <div class="up-arrow href-cart" id="up-arrow">
         <a href="#top">
