--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
 <body>
     <a href="" name="top" class="top-anchor"></a>
 
-    <nav class="nav header-text main-color-bck">
+    <nav class="nav header-text nav-color-bck">
         <a href="./index.html" class="href-cart">
             <p class="text ">PCStore</p>
         </a>
@@ -80,6 +80,7 @@
     <script src="JS/nodes.js"></script>
     <script src="JS/cart.js"></script>
     <script src="JS/main.js"></script>
+    <script src="JS/init_cart.js"></script>
 </body>
 
 </html>
