--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
 <body>
     <a href="" name="top" class="top-anchor"></a>
     
-    <nav class="nav header-text main-color-bck">
+    <nav class="nav header-text nav-color-bck">
         <a href="./index.html" class="href-cart">
             <p class="text">PCStore</p>
         </a>
