--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <a href="" name="top" class="top-anchor"></a>
     
-    <nav class="nav header-text main-color-bck">
+    <nav class="nav header-text nav-color-bck">
         <a href="./index.html" class="href-cart">
             <p class="text this-page-color">PCStore</p>
         </a>
@@ -73,6 +73,7 @@
 
     <script src="JS/nodes.js"></script>
     <script src="JS/main.js"></script>
+    <script src="JS/init_main.js"></script>
 </body>
 
 </html>
