--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <a href="" name="top" class="top-anchor"></a>
-    
+
     <nav class="nav header-text nav-color-bck">
         <a href="./index.html" class="href-cart">
             <p class="text this-page-color">PCStore</p>
@@ -53,11 +53,13 @@
     </div>
 
     <section>
-        <div class="buttons" id="buttons">
-            <label class="filter-button text hover-pointer underline black-color"
-                onclick="GetNodes('', true)">All</label>
+        <div class="buttons-parent centre">
+            <div class="buttons" id="buttons">
+                <label class="filter-button text hover-pointer underline black-color"
+                    onclick="GetNodes('', true)">All</label>
+            </div>
         </div>
-        
+
         <div class="centre">
             <div class="container" id="images-container">
                 <!-- Зображення та опис будуть додаватися динамічно через JavaScript -->
