--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&display=swap" rel="stylesheet">
+
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="JS/charts.js"></script>
 </head>
 
 <body>
@@ -80,9 +83,13 @@
         </a>
     </div>
 
-    <script src="JS/nodes.js"></script>
+    <div class="centre">
+        <div class="text" id="myChart" style="max-width: 700px; height:600px">
+        </div>
+    </div>
+
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="JS/cart.js"></script>
-    <script src="JS/main.js"></script>
     <script src="JS/init_cart.js"></script>
 </body>
 
