--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
     </section>
 
     <div class="centre">
-        <div class="text" id="myChart" style="max-width: 700px; height:600px">
+        <div class="text" id="myChart" style="height:600px">
         </div>
     </div>
 
@@ -88,7 +88,6 @@
         </a>
     </div>
 
-    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="JS/cart.js"></script>
     <script src="JS/init_cart.js"></script>
 </body>
