something but nothing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         <a href="./news.html" class="href-cart">
             <i class="fa fa-newspaper-o cart" aria-hidden="true" style="font-size:36px"></i>
         </a>
+        <a href="./loginSignin.html" class="href-cart text float-right margin-left-20">Login
+        </a>
     </nav>
+
+
+
 
     <div id="modal" class="modal">
         <div class="modal-cont">
