--- a/loginSignin.html
+++ b/loginSignin.html
@@ -32,9 +32,10 @@
     </nav>
 
     <main class="login-signin">
-        <input type="email" id="email">
-        <input type="password" id="password">
-        <input type="password" id="password_confirm">
+        <h1 class="text black-color margin-top-20 margin-bottom-20">Sign in</h1>
+        <input type="email" id="email" placeholder="Email" class="login-input text font-size-14">
+        <input type="password" id="password" placeholder="Password" class="login-input text font-size-14">
+        <input type="password" id="password_confirm" placeholder="Confirm password" class="login-input text font-size-14">
         <button>Enter</button>
     </main>
 </body>
