--- a/loginSignin.html
+++ b/loginSignin.html
@@ -31,11 +31,10 @@
         </a>
     </nav>
 
-    <main class="login-signin">
-        <h1 class="text black-color margin-top-20 margin-bottom-20">Sign in</h1>
-        <input type="email" id="email" placeholder="Email" class="login-input text font-size-14">
-        <input type="password" id="password" placeholder="Password" class="login-input text font-size-14">
-        <input type="password" id="password_confirm" placeholder="Confirm password" class="login-input text font-size-14">
-        <button>Enter</button>
+    <main class="login-signin" id="login-signin">
+       
     </main>
+
+    <script src="JS/login.js"></script>
+    <script src="JS/login_init.js"></script>
 </body>
