project struct, loginsignin

--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
 
 <body>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="JS/charts.js"></script>
+    <script src="JS/cart/charts.js"></script>
     
     <a href="" name="top" class="top-anchor"></a>
 
@@ -89,8 +89,8 @@
         </a>
     </div>
 
-    <script src="JS/cart.js"></script>
-    <script src="JS/init_cart.js"></script>
+    <script src="JS/cart/cart.js"></script>
+    <script src="JS/cart/init_cart.js"></script>
 </body>
 
 </html>
