--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         </a>
     </div>
 
-    <script src="JS/nodes.js"></script>
-    <script src="JS/main.js"></script>
-    <script src="JS/init_main.js"></script>
+    <script src="JS/nodes.js" defer></script>
+    <script src="JS/main/main.js" defer></script>
+    <script src="JS/main/init_main.js" defer></script>
 </body>
 
 </html>
