--- a/loginSignin.html
+++ b/loginSignin.html
@@ -35,6 +35,6 @@
        
     </main>
 
-    <script src="JS/login.js"></script>
-    <script src="JS/login_init.js"></script>
+    <script src="JS/login-signin/login.js"></script>
+    <script src="JS/login-signin/login_init.js"></script>
 </body>
