--- a/news.html
+++ b/news.html
@@ -75,7 +75,7 @@
 
 
     <script src="JS/news_nodes.js"></script>
-    <script src="JS/news_js.js"></script>
+    <script src="JS/news/news_js.js"></script>
 </body>
 
 </html>
